[workspace]
members = [
  "day01",
  "day01_2",
  "day02",
  "day02_2",
  "day03",
  "day03_2",
  "day04",
  "day04_2",
  "day05",
  "day05_2",
  "day06",
  "day06_2",
  "day07",
  "day07_2",
  "day08",
  "day08_2",
  "day09",
  "day09_2",
  "day10",
  "day10_2",
  "day11",
  "day11_2",
  "day12",
  "day12_2",
  "day13",
  "day13_2",
  "day14",
  "day14_2",
  "day15",
  "day15_2",
  "day16",
  "day16_2",
  "day17",
  "day17_2",
  "day18",
  "day18_2",
  "day19",
  "day19_2",
  "day20",
  "day20_2",
  "day21",
  "day21_2",
  "day22",
  "day22_2",
  "day23",
  "day23_2",
  "day24",
  "day24_2",
  "day25",
  "day25_2",
]
